--- a/layouts/commands/single.html
+++ b/layouts/commands/single.html
@@ -52,6 +52,8 @@
         {{ end }}  
       </ul>
     {{ end }}
+    <script src="/js/cli.js"></script>
+    <link rel="stylesheet" href="/css/cli.css">
   </main>
 </div>
 
