--- a/assets/scss/pages/command.scss
+++ b/assets/scss/pages/command.scss
@@ -41,13 +41,8 @@ body > section {
             padding: 0;
 
             > li {
-                padding-block: 0.5em;
+                margin-block: 0.5em;
             }
         }
-    }
-
-    // TODO: talk to itamar
-    form.redis-cli > pre {
-        white-space: pre-wrap;
     }
 }
