--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,9 +8,14 @@ html, body {
     font-size: 16px;
     margin: 0;
     font-family: $font-family;
+    line-height: 1.5;
 }
 
-b, strong, em {
+pre {
+    white-space: pre-wrap;
+}
+
+b, strong, em, .bold {
     font-weight: 500;
 }
 
@@ -27,6 +32,14 @@ h1 {
 
 h2 {
     font-size: 2.625rem;
+}
+
+h3 {
+    font-size: 2.125rem;
+}
+
+h4 {
+    font-size: 1.5em;
 }
 
 a {
@@ -232,7 +245,10 @@ body {
 
                     > ul {
                         flex-direction: column;
-                        margin-inline-start: 0;
+
+                        &.links {
+                            margin-inline-start: 0;
+                        }
                     }
                 }
             }
