--- a/layouts/commands/single.html
+++ b/layouts/commands/single.html
@@ -58,7 +58,7 @@
     <aside>
       {{ $related := .Site.Pages.RelatedIndices . "group" }}
       {{ with $related }}
-        <h3>See also</h3>
+        <div class="bold">See also</div>
         <ul>
           {{ range . }}
             <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
