--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -210,7 +210,6 @@ body {
                                 // extend the "hoverable" area
                                 &:before {
                                     content: '';
-                                    display: block;
                                     height: $topMargin;
                                     position: absolute;
                                     top: -$topMargin;
@@ -233,11 +232,12 @@ body {
 
                 > button {
                     display: block;
+                    margin-inline-start: auto;
                 }
 
                 > nav {
                     display: none;
-                    // flex-basis: 100%;
+                    flex-basis: 100%;
 
                     &.open {
                         display: block;
@@ -247,7 +247,7 @@ body {
                         flex-direction: column;
 
                         &.links {
-                            margin-inline-start: 0;
+                            margin: 1em 0;
                         }
                     }
                 }
