--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -45,6 +45,10 @@ h4 {
 a {
     color: var(--secondary-color);
     text-decoration: none;
+
+    &:hover, &:focus {
+        text-decoration: underline;
+    }
 }
 
 .text-center {
@@ -152,6 +156,7 @@ body {
         > div {
             display: flex;
             align-items: center;
+            gap: 2em;
             font-weight: 500;
 
             > a > svg {
@@ -164,16 +169,11 @@ body {
             }
 
             > nav {
-                flex: 1 1 auto;
-                display: flex;
-                align-items: center;
+                display: contents;
 
                 > ul {
-                    display: flex;
+                    display: contents;
                     list-style: none;
-                    padding: 0;
-                    margin: 0;
-                    gap: 2em;
 
                     a {
                         display: block;
@@ -182,47 +182,50 @@ body {
                         padding: 0.51em;
                     }
 
-                    &.links {
-                        margin-inline-start: 7em;
-                        flex-grow: 1;
+                    &.links > li {
+                        position: relative;
 
-                        > li {
-                            position: relative;
+                        > ul {
+                            $topMargin: 0.5em;
 
-                            > ul {
-                                $topMargin: 0.5em;
+                            display: none;
+                            width: 10em;
+                            position: absolute;
+                            top: calc(100% + #{$topMargin});
+                            left: 0;
+                            z-index: 1;
+                            list-style: none;
+                            padding: 0;
+                            margin: 0;
+                            background: var(--secondary-color);
 
-                                display: none;
-                                width: 10em;
-                                position: absolute;
-                                top: calc(100% + #{$topMargin});
-                                left: 0;
-                                z-index: 1;
-                                list-style: none;
-                                padding: 0;
-                                margin: 0;
-                                background: var(--secondary-color);
-
-                                > li {
-                                    padding: 1em;
-                                }
-
-                                // extend the "hoverable" area
-                                &:before {
-                                    content: '';
-                                    height: $topMargin;
-                                    position: absolute;
-                                    top: -$topMargin;
-                                    width: 100%;
-                                }
+                            > li {
+                                padding: 1em;
                             }
 
-                            &:focus-within, &:hover {
-                                > ul {
-                                    display: block;
-                                }
+                            // extend the "hoverable" area
+                            &:before {
+                                content: '';
+                                height: $topMargin;
+                                position: absolute;
+                                top: -$topMargin;
+                                width: 100%;
                             }
                         }
+
+                        &:focus-within, &:hover {
+                            > ul {
+                                display: block;
+                            }
+                        }
+
+                        &:first-child {
+                            margin-inline-start: 4em;
+                        }
+                    }
+
+                    &.buttons > li:first-child {
+                        margin-inline-start: auto;
                     }
                 }
             }
