--- a/layouts/commands/list.html
+++ b/layouts/commands/list.html
@@ -1,7 +1,7 @@
 {{ define "head" }}
   <script src="/js/commands-filters.js" defer></script>
 
-  {{ partial "partials/scss.html" (dict "path" "scss/pages/commands.scss") }}
+  {{ partial "scss.html" (dict "path" "scss/pages/commands.scss") }}
 {{ end }}
 
 {{ define "main" }}
