--- a/layouts/commands/single.html
+++ b/layouts/commands/single.html
@@ -1,5 +1,5 @@
 {{ define "head" }}
-  {{ partial "partials/scss.html" (dict "path" "scss/pages/command.scss") }}
+  {{ partial "scss.html" (dict "path" "scss/pages/command.scss") }}
 
   <script src="/js/cli.js" defer></script>
   <link rel="stylesheet" href="/css/cli.css">
