--- a/assets/scss/pages/docs.scss
+++ b/assets/scss/pages/docs.scss
@@ -1,57 +1,73 @@
 body > section {
-    display: flex;
+  display: flex;
+  gap: 1em;
+
+  > nav {
+    flex: 0 0 var(--nav-width);
+
+    ul {
+      list-style: none;
+      margin: 0 0 0 1em;
+      padding: 0;
+      font-weight: 400;
+
+      > li {
+        margin: 0.5em 0;
+
+        > a {
+          color: var(--neutral-text-color);
+        }
+
+        &.active > a {
+          color: var(--secondary-color);
+        }
+      }
+    }
+
+    > ul {
+      margin: 0;
+      font-weight: 500;
+    }
+  }
+
+  > main {
+    flex: 1 1 0;
+
+    > aside {
+      display: inline-block;
+      border: 1px solid #eeeeee;
+      padding: 1em;
+
+      > p {
+        margin: 0;
+      }
+
+      > nav > ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+    }
 
     > nav {
-        flex: 0 0 var(--nav-width);
+      border-top: 1px solid var(--neutral-text-color);
 
-        ul {
-            list-style: none;
-            margin: 0 0 0 1em;
-            padding: 0;
-            font-weight: 400;
+      > ul {
+        list-style: none;
+        padding: 0;
 
-            > li {
-                margin: 0.5em 0;
+        > li {
+          margin-block: 1em;
 
-                > a {
-                    color: var(--neutral-text-color);
-                }
-
-                &.active > a {
-                    color: var(--secondary-color);
-                }
-            }
-        }
-
-        > ul {
-            margin: 0;
+          > a {
             font-weight: 500;
+          }
+
+          > p {
+            margin: 0;
+          }
         }
+      }
     }
-
-    > main {
-        flex: 1 1 auto;
-        min-width: 0; // prevent flex overflow
-
-        > nav {
-            border-top: 1px solid var(--neutral-text-color);
-
-            > ul {
-                list-style: none;
-                padding: 0;
-
-                > li {
-                    margin-block: 1em;
-
-                    > a {
-                        font-weight: 500;
-                    }
-
-                    > p {
-                        margin: 0;
-                    }
-                }
-            }
-        }
-    }
+  }
 }
