--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,267 +1,276 @@
 @import './root', './font';
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
-    font-size: 16px;
-    margin: 0;
-    font-family: $font-family;
-    line-height: 1.5;
+  font-size: 16px;
+  margin: 0;
+  font-family: $font-family;
+  line-height: 1.5;
 }
 
 pre {
-    white-space: pre-wrap;
+  white-space: pre-wrap;
 }
 
 b, strong, em, .bold {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 0;
-    font-weight: 500;
-    color: var(--primary-text-color);
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+  color: var(--primary-text-color);
 }
 
 h1 {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
 h2 {
-    font-size: 2.625rem;
+  font-size: 2.625rem;
 }
 
 h3 {
-    font-size: 2.125rem;
+  font-size: 2.125rem;
 }
 
 h4 {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 a {
-    color: var(--secondary-color);
-    text-decoration: none;
+  color: var(--secondary-color);
+  text-decoration: none;
 
-    &:hover, &:focus {
-        text-decoration: underline;
-    }
+  &:hover, &:focus {
+    text-decoration: underline;
+  }
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .primary-background-color {
-    background-color: var(--primary-color);
-    color: var(--text-on-primary-color);
+  background-color: var(--primary-color);
+  color: var(--text-on-primary-color);
 }
 
 .primary-text-color {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .neutral-text-color {
-    color: var(--neutral-text-color);
+  color: var(--neutral-text-color);
+}
+
+> nav > ul {
+  list-style: none;
+  padding: 0;
 }
 
 .button, .button-outline, .button-outline-white {
-    display: inline-block;
-    padding: 1em;
-    border-radius: 2px;
-    font-weight: 500;
-    text-decoration: none;
-    transition:
-        background-color var(--transition-duration),
-        border var(--transition-duration);
+  display: inline-block;
+  padding: 1em;
+  border-radius: 2px;
+  font-weight: 500;
+  text-decoration: none;
+  transition:
+    background-color var(--transition-duration),
+    border var(--transition-duration);
 }
 
 .button {
-    --color: var(--secondary-color);
-    background-color: var(--color);
-    border: 1px solid var(--color);
-    color: var(--text-on-secondary-color);
+  --color: var(--secondary-color);
+  background-color: var(--color);
+  border: 1px solid var(--color);
+  color: var(--text-on-secondary-color);
 
-    &:hover, &:focus-within {
-        --color: var(--secondary-color-shade);
-    }
+  &:hover, &:focus-within {
+    --color: var(--secondary-color-shade);
+  }
 }
 
 .button-outline, .button-outline-white {
-    border: 1px solid var(--color);
-    color: var(--color);
+  border: 1px solid var(--color);
+  color: var(--color);
 
-    &:hover, &:focus-within {
-        --color: #ffffff;
-        background-color: var(--secondary-color);
-        border-color: var(--secondary-color);
-    }
+  &:hover, &:focus-within {
+    --color: #ffffff;
+    background-color: var(--secondary-color);
+    border-color: var(--secondary-color);
+  }
 }
 
 .button-outline {
-    --color: var(--primary-color);
+  --color: var(--primary-color);
 }
 
 .button-outline-white {
-    --color: #ffffff;
+  --color: #ffffff;
 }
 
 .full-width, .full-width-container > * {
-    width: Min(100%, var(--max-width));
-    padding: var(--min-padding);
-    margin-inline: auto;
+  width: Min(100%, var(--max-width));
+  padding: var(--min-padding);
+  margin-inline: auto;
 }
 
 .row {
-    display: flex;
+  display: flex;
 
-    @media only screen and (max-width: 45rem) {
-        flex-direction: column;
+  @media only screen and (max-width: 45rem) {
+    flex-direction: column;
+  }
+
+  @media only screen and (min-width: 45rem) {
+    gap: 1em;
+
+    > * {
+      flex-basis: 0;
+      flex-grow: 1;
+      max-width: 100%;
     }
 
-    @media only screen and (min-width: 45rem) {
-        gap: 2em;
-
-        > * {
-            flex-basis: 0;
-            flex-grow: 1;
-            max-width: 100%;
-        }
-
-        > h2 {
-            flex: 0 0 100%;
-        }
-
-        &.align-items-center {
-            align-items: center;
-        }
+    > h2 {
+      flex: 0 0 100%;
     }
+
+    &.align-items-center {
+      align-items: center;
+    }
+  }
+}
+
+html {
+  scroll-padding-top: 5em;
 }
 
 body {
-    min-height: 100vh;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 
-    > header {
-        position: sticky;
-        z-index: 1;
-        top: 0;
-        font-size: 0.875em;
-        box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+  > header {
+    position: sticky;
+    z-index: 1;
+    top: 0;
+    font-size: 0.875em;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
 
-        > div {
-            display: flex;
-            align-items: center;
-            gap: 2em;
-            font-weight: 500;
+    > div {
+      display: flex;
+      align-items: center;
+      gap: 2em;
+      font-weight: 500;
 
-            > a > svg {
-                display: block;
-                height: 2.5em;
-            }
+      > a > svg {
+        display: block;
+        height: 2.5em;
+      }
 
-            > button {
-                display: none;
-            }
+      > button {
+        display: none;
+      }
 
-            > nav {
-                display: contents;
+      > nav {
+        display: contents;
 
-                > ul {
-                    display: contents;
-                    list-style: none;
+        > ul {
+          display: contents;
+          list-style: none;
 
-                    a {
-                        display: block;
-                        color: inherit;
-                        text-decoration: none;
-                        padding: 0.51em;
-                    }
-
-                    &.links > li {
-                        position: relative;
-
-                        > ul {
-                            $topMargin: 0.5em;
-
-                            display: none;
-                            width: 10em;
-                            position: absolute;
-                            top: calc(100% + #{$topMargin});
-                            left: 0;
-                            z-index: 1;
-                            list-style: none;
-                            padding: 0;
-                            margin: 0;
-                            background: var(--secondary-color);
-
-                            > li {
-                                padding: 1em;
-                            }
-
-                            // extend the "hoverable" area
-                            &:before {
-                                content: '';
-                                height: $topMargin;
-                                position: absolute;
-                                top: -$topMargin;
-                                width: 100%;
-                            }
-                        }
-
-                        &:focus-within, &:hover {
-                            > ul {
-                                display: block;
-                            }
-                        }
-
-                        &:first-child {
-                            margin-inline-start: 4em;
-                        }
-                    }
-
-                    &.buttons > li:first-child {
-                        margin-inline-start: auto;
-                    }
-                }
-            }
-
-            @media screen and (max-width: 70em) {
-                flex-wrap: wrap;
-
-                > button {
-                    display: block;
-                    margin-inline-start: auto;
-                }
-
-                > nav {
-                    display: none;
-                    flex-basis: 100%;
-
-                    &.open {
-                        display: block;
-                    }
-
-                    > ul {
-                        flex-direction: column;
-
-                        &.links {
-                            margin: 1em 0;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    > footer {
-        a {
+          a {
+            display: block;
             color: inherit;
-            font-weight: 500;
+            text-decoration: none;
+            padding: 0.51em;
+          }
+
+          &.links > li {
+            position: relative;
+
+            > ul {
+              $topMargin: 0.5em;
+
+              display: none;
+              width: 10em;
+              position: absolute;
+              top: calc(100% + #{$topMargin});
+              left: 0;
+              z-index: 1;
+              list-style: none;
+              padding: 0;
+              margin: 0;
+              background: var(--secondary-color);
+
+              > li {
+                  padding: 1em;
+              }
+
+              // extend the "hoverable" area
+              &:before {
+                content: '';
+                height: $topMargin;
+                position: absolute;
+                top: -$topMargin;
+                width: 100%;
+              }
+            }
+
+            &:focus-within, &:hover {
+              > ul {
+                display: block;
+              }
+            }
+
+            &:first-child {
+              margin-inline-start: 4em;
+            }
+          }
+
+          &.buttons > li:first-child {
+            margin-inline-start: auto;
+          }
         }
+      }
+
+      @media screen and (max-width: 70em) {
+        flex-wrap: wrap;
+
+        > button {
+          display: block;
+          margin-inline-start: auto;
+        }
+
+        > nav {
+          display: none;
+          flex-basis: 100%;
+
+          &.open {
+            display: block;
+          }
+
+          > ul {
+            flex-direction: column;
+
+            &.links {
+              margin: 1em 0;
+            }
+          }
+        }
+      }
     }
+  }
+
+  > footer {
+    a {
+      color: inherit;
+      font-weight: 500;
+    }
+  }
 }
