--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
     {{ template "_internal/schema.html" . -}}
     {{ template "_internal/twitter_cards.html" . -}}
 
-    {{ partial "partials/scss.html" (dict "path" "scss/style.scss") }}
+    {{ partial "scss.html" (dict "path" "scss/style.scss") }}
 
     {{ block "head" . }}{{ end }}
 
