--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -5,6 +5,9 @@
   --secondary-color-shade: #454cd5;
   --text-on-secondary-color: #ffffff;
   --neutral-text-color: #4e545b;
+  --success-color: #0fa869;
+  --warning-color: #ffb553;
+  --error-color: #ff5d15;
   --max-width: 85rem;
   --min-padding: 1rem;
   --nav-width: 20rem;
