--- a/layouts/partials/docs-toc.html
+++ b/layouts/partials/docs-toc.html
@@ -1,6 +1,8 @@
 {{ with .TableOfContents }}
-    <aside>
-        <p class="bold">On This Page</p>
-        {{ . }}
-    </aside>
+    {{ if gt (len .) 32 }}
+        <aside>
+            <p class="bold">On This Page</p>
+            {{ . }}
+        </aside>
+    {{ end }}
 {{ end }}
