--- a/assets/scss/pages/bazzar.scss
+++ b/assets/scss/pages/bazzar.scss
@@ -1,3 +1,5 @@
+@import '../partials/docs-nav';
+
 .bazzar-group {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(7em, 1fr));
@@ -14,14 +16,3 @@
   gap: 1rem;
 }
 
-i.bazzar-star {
-  color: #ffe00d;
-}
-
-.bazzar-active {
-  color: green;
-}
-
-.bazzar-recommended {
-  color: red;
-}
