--- a/assets/scss/pages/docs.scss
+++ b/assets/scss/pages/docs.scss
@@ -1,71 +1,38 @@
-body > section {
-  display: flex;
-  gap: 1em;
+@import '../partials/docs-nav';
 
-  > nav {
-    flex: 0 0 var(--nav-width);
+body > section > main {
+  > aside {
+    display: inline-block;
+    border: 1px solid #eeeeee;
+    padding: 1em;
 
-    ul {
-      list-style: none;
-      margin: 0 0 0 1em;
-      padding: 0;
-      font-weight: 400;
-
-      > li {
-        margin: 0.5em 0;
-
-        > a {
-          color: var(--neutral-text-color);
-        }
-
-        &.active > a {
-          color: var(--secondary-color);
-        }
-      }
+    > p {
+      margin: 0;
     }
 
-    > ul {
+    > nav > ul {
+      list-style: none;
       margin: 0;
-      font-weight: 500;
+      padding: 0;
     }
   }
 
-  > main {
-    flex: 1 1 0;
+  > nav {
+    border-top: 1px solid var(--neutral-text-color);
 
-    > aside {
-      display: inline-block;
-      border: 1px solid #eeeeee;
-      padding: 1em;
+    > ul {
+      list-style: none;
+      padding: 0;
 
-      > p {
-        margin: 0;
-      }
+      > li {
+        margin-block: 1em;
 
-      > nav > ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-    }
+        > a {
+          font-weight: 500;
+        }
 
-    > nav {
-      border-top: 1px solid var(--neutral-text-color);
-
-      > ul {
-        list-style: none;
-        padding: 0;
-
-        > li {
-          margin-block: 1em;
-
-          > a {
-            font-weight: 500;
-          }
-
-          > p {
-            margin: 0;
-          }
+        > p {
+          margin: 0;
         }
       }
     }
