--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -10,7 +10,8 @@
   --error-color: #ff5d15;
   --max-width: 85rem;
   --min-padding: 1rem;
-  --nav-width: 20rem;
+  --nav-width: 15rem;
+  --header-height: 5.5rem;
   --transition-duration: 0.4s;
 }
 
