--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -183,7 +183,7 @@ body {
 
       > div.logo {
         height: 100%;
-        padding: 0.5em;
+        padding-block: 0.5em;
         width: var(--nav-width);
 
         > a, > a > svg {
