--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,13 @@
-<p class="full-width">
+<p class="container max-w-7xl mx-auto px-4 sm:px-8 py-8 text-slate-200 text-sm text-center">
   This website is
-  <a href="https://github.com/redis/redis-io">open source software</a>
+  <a href="https://github.com/redis/redis-io" class="text-white underline underline-offset-1 decoration-slate-500 hover:decoration-white transition-colors">
+    open source software
+  </a>
   and is sponsored by
-  <a href="https://redis.com">Redis Ltd.</a>
-  See all <a href="/topics/sponsors">credits</a>.
+  <a href="https://redis.com" class="text-white underline underline-offset-1 decoration-slate-500 hover:decoration-white transition-colors">
+    Redis Ltd.
+  </a>
+  See all <a href="/topics/sponsors" class="text-white underline underline-offset-1 decoration-slate-500 hover:decoration-white transition-colors">
+    credits
+  </a>.
 </p>
