--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -1,26 +1,28 @@
+.cli-window {
+  $triangleMargin: 2em;
+
+  position: relative;
+  padding: $triangleMargin $triangleMargin 0 0;
+  background: url('/images/triangle-lines.svg') no-repeat top right;
+}
+
+.chrome {
+  background-color: black;
+  border-radius: 2px 2px 0 0;
+  height: 2em;
+  width: 100%;
+}
+
+.cli {
+  width: 100%;
+}
+
 body > main > section {
-  background: linear-gradient(180deg, #f6f6f6 0%, #ffffff 100%);
+  // background: linear-gradient(180deg, #f6f6f6 0%, #ffffff 100%);
   padding: 1.5em 0;
 
   &.hero {
-    div.cli-window {
-      $triangleMargin: 2em;
-
-      position: relative;
-      padding: $triangleMargin $triangleMargin 0 0;
-      background: url('/images/triangle-lines.svg') no-repeat top right;
-
-      > header {
-        background-color: var(--primary-color);
-        border-radius: 2px 2px 0 0;
-        height: 2em;
-        width: 100%;
-      }
-
-      > img.cli {
-        width: 100%;
-      }
-    }
+    
 
     div.stat {
       font-weight: 500;
@@ -35,32 +37,32 @@ body > main > section {
     }
   }
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2em;
+  // .grid {
+  //   display: grid;
+  //   grid-template-columns: repeat(3, 1fr);
+  //   gap: 2em;
 
-    @media screen and (max-width: 70em) {
-      grid-template-columns: 1fr;
-    }
+  //   @media screen and (max-width: 70em) {
+  //     grid-template-columns: 1fr;
+  //   }
 
-    > h2 {
-      grid-column: 1 / -1;
-    }
+  //   > h2 {
+  //     grid-column: 1 / -1;
+  //   }
 
-    > div {
-      display: flex;
-      gap: 0.5em;
-      flex-direction: column;
+  //   > div {
+  //     display: flex;
+  //     gap: 0.5em;
+  //     flex-direction: column;
 
-      > p {
-        flex: 1 1 0;
-      }
-    }
+  //     > p {
+  //       flex: 1 1 0;
+  //     }
+  //   }
 
-    &.with-border > div {
-      border-top: 2px solid var(--secondary-color);
-      padding-top: 1em;
-    }
-  }
+  //   &.with-border > div {
+  //     border-top: 2px solid var(--secondary-color);
+  //     padding-top: 1em;
+  //   }
+  // }
 }
