--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,59 +1,59 @@
 @import './root', './font';
 
-* {
-  box-sizing: border-box;
-}
+// * {
+//   box-sizing: border-box;
+// }
 
-html, body {
-  font-size: 16px;
-  margin: 0;
-  font-family: $font-family;
-  line-height: 1.5;
-}
+// html, body {
+//   font-size: 16px;
+//   margin: 0;
+//   font-family: $font-family;
+//   line-height: 1.5;
+// }
 
-pre {
-  white-space: pre-wrap;
-}
+// pre {
+//   white-space: pre-wrap;
+// }
 
-b, strong, em, .bold {
-  font-weight: 500;
-}
+// b, strong, em, .bold {
+//   font-weight: 500;
+// }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-  font-weight: 500;
-  color: var(--primary-text-color);
-}
+// h1, h2, h3, h4, h5, h6 {
+//   margin: 0;
+//   padding: 0;
+//   font-weight: 500;
+//   color: var(--primary-text-color);
+// }
 
-h1 {
-  font-size: 3.5rem;
-}
+// h1 {
+//   font-size: 3.5rem;
+// }
 
-h2 {
-  font-size: 2.625rem;
-}
+// h2 {
+//   font-size: 2.625rem;
+// }
 
-h3 {
-  font-size: 2.125rem;
-}
+// h3 {
+//   font-size: 2.125rem;
+// }
 
-h4 {
-  font-size: 1.5em;
-}
+// h4 {
+//   font-size: 1.5em;
+// }
 
-a {
-  color: var(--secondary-color);
-  text-decoration: none;
+// a {
+//   color: var(--secondary-color);
+//   text-decoration: none;
 
-  &:hover, &:focus {
-    text-decoration: underline;
-  }
-}
+//   &:hover, &:focus {
+//     text-decoration: underline;
+//   }
+// }
 
-.text-center {
-  text-align: center;
-}
+// .text-center {
+//   text-align: center;
+// }
 
 .primary-background-color {
   background-color: var(--primary-color);
