--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,53 +1,46 @@
-<div class="full-width">
-  <div class="logo">
-    <a href="{{ .Site.Home.RelPermalink }}">
-      {{ with resources.Get "icons/logo.svg" }}
-        {{ ( . | minify).Content | safeHTML }}
-      {{ end }}
-    </a>
-  </div>
+<div class="flex items-center w-full h-16 container max-w-7xl mx-auto px-4 sm:px-8">
+  <a href="{{ .Site.Home.RelPermalink }}">
+    {{ partial "icons/logo.html" (dict "context" . "class" "w-auto h-8") }}
+  </a>
 
-	<button type="button" onclick="event.target.nextElementSibling.classList.toggle('open')">
-		HAMBURGER
+	<button type="button" onclick="event.target.nextElementSibling.classList.toggle('open')" class="menu-toggle block ml-auto lg:hidden relative z-50">
+		Mobile Menu
 	</button>
 
-	<nav>
-		<ul class="links">
-			{{ $currentPage := . }}
-			{{ range .Site.Menus.main }}
-				{{ if .HasChildren }}
-					<li class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
-						<a href="#">
-							{{ .Pre }}
-							<span>{{ .Name }}</span>
-						</a>
-						<ul class="sub-menu">
-							{{ range .Children }}
-								<li class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
-									<a href="{{ .URL }}">{{ .Name }}</a>
-								</li>
-							{{ end }}
-						</ul>
-					</li>
-				{{ else }}
-					<li>
-						<a href="{{ .URL }}">
-							{{ .Pre }}
-							<span>{{ .Name }}</span>
-						</a>
-					</li>
-				{{ end }}
-			{{ end }}
-		</ul>
-
-		<ul class="buttons">
-			{{ range .Site.Menus.buttons }}
-				<li>
-					<a class="button{{ with .Params.style }}-{{ . }}{{ end }}" href="{{ .URL }}">
-						{{ .Name }}
-					</a>
-				</li>
-			{{ end }}
-		</ul>
+	<nav class="flex items-center flex-1">
+    {{ $currentPage := . }}
+    <div class="flex items-center mx-auto">
+      {{ range .Site.Menus.main }}
+        {{ if .HasChildren }}
+          <dl class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }} group relative ml-1 mt-3 mb-0 px-3 pt-2 pb-5 cursor-pointer">
+            <dt class="grid gap-x-2 gap-y-1 grid-cols-1 lg:grid-cols-auto-span items-center justify-items-center lg:justify-items-start whitespace-nowrap" href="#">
+              {{ .Pre }}
+              {{ .Name }}
+            </dt>
+            <dd class="text-[0.8rem] lg:text-sm text-gray-900 dark:text-white absolute top-full -mt-1 right-[1000rem] group-hover:right-0 group-focus-within:right-0 flex flex-col bg-white dark:bg-[#25263D] rounded-lg border border-gray-500/10 bg-clip-padding shadow-md p-2">
+              {{ range .Children }}
+                <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} grid gap-x-2 grid-cols-auto-span items-center whitespace-nowrap rounded-md min-w-[11rem] px-3 py-2 hover:bg-violet-100 focus:bg-violet-100 dark:hover:bg-gray-900 dark:focus:bg-gray-900">
+                  {{ .Name }}
+                </a>
+              {{ end }}
+            </dd>
+          </dl>
+        {{ else }}
+          <a href="{{ .URL }}" class="group grid gap-x-2 gap-y-1 grid-cols-1 lg:grid-cols-auto-span items-center justify-items-center lg:justify-items-start ml-1 px-3 py-2 rounded-lg bg-transparent hover:bg-[#25263D] focus:bg-[#25263D] whitespace-nowrap">
+            {{ .Pre }}
+            {{ .Name }}
+          </a>
+        {{ end }}
+      {{ end }}
+    </div>
+    <div class="flex items-center space-x-2">
+      {{ range .Site.Menus.buttons }}
+        <a class="transition-colors shrink-0 ml-2 inline-flex items-center px-4 py-2 text-sm font-medium rounded-md border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900
+        {{ if (eq .Params.style "solid") }} border-transparent bg-indigo-500 hover:bg-indigo-600 focus:bg-indigo-600 focus:ring-indigo-600{{ end }}
+        {{ if (eq .Params.style "outline") }} border-white hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white{{ end }}" href="{{ .URL }}">
+          {{ .Name }}
+        </a>
+      {{ end }}
+    </div>
 	</nav>
-</nav>
+</div>
