--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,27 +1,19 @@
-{{ define "head" }}
-  {{ partial "scss.html" (dict "path" "scss/pages/docs.scss") }}
-{{ end }}
-
 {{ define "main" }}
-  <section class="container max-w-[90rem] mx-auto px-4 sm:px-8 grid grid-cols-[auto,1fr]">
+  <main class="docs w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 md:grid grid-cols-[auto,1fr,auto] gap-16 relative">
     {{ partial "docs-nav.html" . }}
 
-    <main class="prose">
+    <section class="prose prose-slate py-12">
       <h1>{{ .Title }}</h1>
       {{ with .Params.description }}<p>{{ . | markdownify }}</p>{{ end }}
-      {{ partial "docs-toc.html" . }}
       {{ .Content }}
-
       <nav>
-        <ul>
-          {{ range .CurrentSection.Pages }}
-            <li>
-              <a href="{{ .RelPermalink }}"{{ with .Params.manualLinkTitle }} title="{{ . }}"{{ end }}{{ with .Params.manualLinkTarget }} target="{{ . }}"{{ if eq . "_blank" }} rel="noopener"{{ end }}{{ end }}>{{- .Title -}}</a>
-              <p>{{ .Description | markdownify }}</p>
-            </li>
-          {{ end }}
-        </ul>
-      </aside>
-    </main>
-  </section>
+        {{ range .CurrentSection.Pages }}
+          <a href="{{ .RelPermalink }}"{{ with .Params.manualLinkTitle }} title="{{ . }}"{{ end }}{{ with .Params.manualLinkTarget }} target="{{ . }}"{{ if eq . "_blank" }} rel="noopener"{{ end }}{{ end }}>{{- .Title -}}</a>
+          <p>{{ .Description | markdownify }}</p>
+        {{ end }}
+      </nav>
+    </section>
+
+    {{ partial "docs-toc.html" . }}
+  </main>
 {{ end }}
