--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -85,46 +85,46 @@
   padding: 0;
 }
 
-.button, .button-outline, .button-outline-white {
-  display: inline-block;
-  padding: 1em;
-  border-radius: 2px;
-  font-weight: 500;
-  text-decoration: none;
-  transition:
-    background-color var(--transition-duration),
-    border var(--transition-duration);
-}
+// .button, .button-outline, .button-outline-white {
+//   display: inline-block;
+//   padding: 1em;
+//   border-radius: 2px;
+//   font-weight: 500;
+//   text-decoration: none;
+//   transition:
+//     background-color var(--transition-duration),
+//     border var(--transition-duration);
+// }
 
-.button {
-  --color: var(--secondary-color);
-  background-color: var(--color);
-  border: 1px solid var(--color);
-  color: var(--text-on-secondary-color);
+// .button {
+//   --color: var(--secondary-color);
+//   background-color: var(--color);
+//   border: 1px solid var(--color);
+//   color: var(--text-on-secondary-color);
 
-  &:hover, &:focus-within {
-    --color: var(--secondary-color-shade);
-  }
-}
+//   &:hover, &:focus-within {
+//     --color: var(--secondary-color-shade);
+//   }
+// }
 
-.button-outline, .button-outline-white {
-  border: 1px solid var(--color);
-  color: var(--color);
+// .button-outline, .button-outline-white {
+//   border: 1px solid var(--color);
+//   color: var(--color);
 
-  &:hover, &:focus-within {
-    --color: #ffffff;
-    background-color: var(--secondary-color);
-    border-color: var(--secondary-color);
-  }
-}
+//   &:hover, &:focus-within {
+//     --color: #ffffff;
+//     background-color: var(--secondary-color);
+//     border-color: var(--secondary-color);
+//   }
+// }
 
-.button-outline {
-  --color: var(--primary-color);
-}
+// .button-outline {
+//   --color: var(--primary-color);
+// }
 
-.button-outline-white {
-  --color: #ffffff;
-}
+// .button-outline-white {
+//   --color: #ffffff;
+// }
 
 .full-width, .full-width-container > * {
   width: Min(100%, var(--max-width));
@@ -167,138 +167,138 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
 
-  > header {
-    position: sticky;
-    z-index: 1;
-    top: 0;
-    font-size: 0.875em;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+  // > header {
+  //   position: sticky;
+  //   z-index: 1;
+  //   top: 0;
+  //   font-size: 0.875em;
+  //   box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
 
-    > div.full-width {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      font-weight: 500;
-      height: var(--header-height);
+  //   > div.full-width {
+  //     display: flex;
+  //     align-items: center;
+  //     gap: 1rem;
+  //     font-weight: 500;
+  //     height: var(--header-height);
 
-      > div.logo {
-        height: 100%;
-        padding-block: 0.5em;
-        width: var(--nav-width);
+  //     > div.logo {
+  //       height: 100%;
+  //       padding-block: 0.5em;
+  //       width: var(--nav-width);
 
-        > a, > a > svg {
-          height: 100%;
-        }
-      }
+  //       > a, > a > svg {
+  //         height: 100%;
+  //       }
+  //     }
 
-      > button {
-        display: none;
-      }
+  //     > button {
+  //       display: none;
+  //     }
 
-      > nav {
-        display: contents;
+  //     > nav {
+  //       display: contents;
 
-        > ul {
-          display: contents;
-          list-style: none;
+  //       > ul {
+  //         display: contents;
+  //         list-style: none;
 
-          a {
-            display: block;
-            color: inherit;
-          }
+  //         a {
+  //           display: block;
+  //           color: inherit;
+  //         }
 
-          &.links > li {
-            position: relative;
+  //         &.links > li {
+  //           position: relative;
 
-            > a {
-              margin-inline-end: 1em;
-            }
+  //           > a {
+  //             margin-inline-end: 1em;
+  //           }
 
-            > ul {
-              $padding: 1em;
-              $topMargin: 1em;
+  //           > ul {
+  //             $padding: 1em;
+  //             $topMargin: 1em;
 
-              display: none;
-              width: 10em;
-              position: absolute;
-              top: calc(100% + #{$topMargin});
-              left: -$padding;
-              z-index: 1;
-              list-style: none;
-              padding: 0;
-              margin: 0;
-              background: var(--secondary-color);
-              border-radius: 3px;
+  //             display: none;
+  //             width: 10em;
+  //             position: absolute;
+  //             top: calc(100% + #{$topMargin});
+  //             left: -$padding;
+  //             z-index: 1;
+  //             list-style: none;
+  //             padding: 0;
+  //             margin: 0;
+  //             background: var(--secondary-color);
+  //             border-radius: 3px;
 
-              > li {
-                padding: $padding;
-              }
+  //             > li {
+  //               padding: $padding;
+  //             }
 
-              // triangle
-              &:before {
-                content: '';
-                $size: 0.5em;
-                position: absolute;
-                top: -$size;
-                left: $padding;
-                border-left: $size solid transparent;
-                border-right: $size solid transparent;
-                border-bottom: $size solid var(--secondary-color);
-                margin-left: -$size / 2;
-              }
+  //             // triangle
+  //             &:before {
+  //               content: '';
+  //               $size: 0.5em;
+  //               position: absolute;
+  //               top: -$size;
+  //               left: $padding;
+  //               border-left: $size solid transparent;
+  //               border-right: $size solid transparent;
+  //               border-bottom: $size solid var(--secondary-color);
+  //               margin-left: -$size / 2;
+  //             }
 
-              // extend the "hoverable" area
-              &:after {
-                content: '';
-                height: $topMargin;
-                position: absolute;
-                top: -$topMargin;
-                width: 100%;
-              }
-            }
+  //             // extend the "hoverable" area
+  //             &:after {
+  //               content: '';
+  //               height: $topMargin;
+  //               position: absolute;
+  //               top: -$topMargin;
+  //               width: 100%;
+  //             }
+  //           }
 
-            &:focus-within, &:hover {
-              > ul {
-                display: block;
-              }
-            }
-          }
+  //           &:focus-within, &:hover {
+  //             > ul {
+  //               display: block;
+  //             }
+  //           }
+  //         }
 
-          &.buttons > li {
-            &:first-child {
-              margin-inline-start: auto;
-            }
-          }
-        }
-      }
+  //         &.buttons > li {
+  //           &:first-child {
+  //             margin-inline-start: auto;
+  //           }
+  //         }
+  //       }
+  //     }
 
-      @media screen and (max-width: 70em) {
-        flex-wrap: wrap;
+  //     @media screen and (max-width: 70em) {
+  //       flex-wrap: wrap;
 
-        > button {
-          display: block;
-          margin-inline-start: auto;
-        }
+  //       > button {
+  //         display: block;
+  //         margin-inline-start: auto;
+  //       }
 
-        > nav {
-          display: none;
-          flex-basis: 100%;
+  //       > nav {
+  //         display: none;
+  //         flex-basis: 100%;
 
-          &.open {
-            display: block;
-          }
+  //         &.open {
+  //           display: block;
+  //         }
 
-          > ul {
-            flex-direction: column;
+  //         > ul {
+  //           flex-direction: column;
 
-            &.links {
-              margin: 1em 0;
-            }
-          }
-        }
-      }
-    }
-  }
+  //           &.links {
+  //             margin: 1em 0;
+  //           }
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 
   > footer {
     a {
