--- a/layouts/docs/bazzar.html
+++ b/layouts/docs/bazzar.html
@@ -1,12 +1,8 @@
-{{ define "head" }}
-  {{ partial "scss.html" (dict "path" "scss/pages/bazzar.scss") }}
-{{ end }}
-
 {{ define "main" }}
-  <section class="container max-w-[90rem] mx-auto px-4 sm:px-8 grid grid-cols-[auto,1fr]">
+  <main class="docs w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 md:grid grid-cols-[auto,1fr,auto] gap-16 relative">
     {{ partial "docs-nav.html" . }}
 
-    <main class="prose lg:prose-xl">
+    <section class="prose prose-slate py-12">
       {{ .Render "content" }}
 
       {{ $bazzar := $.Param "bazzar" }}
@@ -98,6 +94,6 @@
           {{ end }}
         {{ end }}
       </div>
-    </main>
-  </section>
+    </section>
+  </main>
 {{ end }}
