--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,46 +1,92 @@
 <div class="flex items-center w-full h-16 container max-w-7xl mx-auto px-4 sm:px-8">
-  <a href="{{ .Site.Home.RelPermalink }}">
+  <a class="relative z-50 mr-auto" href="{{ .Site.Home.RelPermalink }}">
     {{ partial "icons/logo.html" (dict "context" . "class" "w-auto h-8") }}
   </a>
 
-	<button type="button" onclick="event.target.nextElementSibling.classList.toggle('open')" class="menu-toggle block ml-auto lg:hidden relative z-50">
-		Mobile Menu
-	</button>
-
-	<nav class="flex items-center flex-1">
+	<nav data-menu class="hidden lg:flex items-center justify-center content-center gap-y-4 flex-1 z-40 fixed inset-0 lg:static bg-gray-900 lg:bg-transparent text-base sm:text-sm">
     {{ $currentPage := . }}
-    <div class="flex items-center mx-auto">
-      {{ range .Site.Menus.main }}
-        {{ if .HasChildren }}
-          <dl class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }} group relative ml-1 mt-3 mb-0 px-3 pt-2 pb-5 cursor-pointer">
-            <dt class="grid gap-x-2 gap-y-1 grid-cols-1 lg:grid-cols-auto-span items-center justify-items-center lg:justify-items-start whitespace-nowrap" href="#">
-              {{ .Pre }}
-              {{ .Name }}
-            </dt>
-            <dd class="text-[0.8rem] lg:text-sm text-gray-900 dark:text-white absolute top-full -mt-1 right-[1000rem] group-hover:right-0 group-focus-within:right-0 flex flex-col bg-white dark:bg-[#25263D] rounded-lg border border-gray-500/10 bg-clip-padding shadow-md p-2">
-              {{ range .Children }}
-                <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} grid gap-x-2 grid-cols-auto-span items-center whitespace-nowrap rounded-md min-w-[11rem] px-3 py-2 hover:bg-violet-100 focus:bg-violet-100 dark:hover:bg-gray-900 dark:focus:bg-gray-900">
-                  {{ .Name }}
-                </a>
-              {{ end }}
-            </dd>
-          </dl>
-        {{ else }}
-          <a href="{{ .URL }}" class="group grid gap-x-2 gap-y-1 grid-cols-1 lg:grid-cols-auto-span items-center justify-items-center lg:justify-items-start ml-1 px-3 py-2 rounded-lg bg-transparent hover:bg-[#25263D] focus:bg-[#25263D] whitespace-nowrap">
+    {{ range .Site.Menus.main }}
+      {{ if .HasChildren }}
+        <dl class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }} group relative first:ml-auto ml-1 mt-3 mb-0 px-3 pt-2 pb-5 cursor-pointer">
+          <dt class="grid gap-x-2 gap-y-1 grid-cols-1 lg:grid-cols-auto-span items-center justify-items-center lg:justify-items-start whitespace-nowrap" href="#">
             {{ .Pre }}
             {{ .Name }}
-          </a>
-        {{ end }}
+          </dt>
+          <dd class="text-[0.8rem] lg:text-sm text-gray-900 dark:text-white absolute top-full -mt-1 right-[1000rem] group-hover:right-[unset] group-hover:-left-3 group-focus-within:right-[unset] group-focus-within:-left-3 flex flex-col bg-white dark:bg-[#25263D] rounded-lg border border-gray-500/10 bg-clip-padding shadow-md p-2">
+            {{ range .Children }}
+              <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} grid gap-x-2 grid-cols-auto-span items-center whitespace-nowrap rounded-lg min-w-[11rem] px-3 py-2 hover:bg-violet-100 focus:bg-violet-100 dark:hover:bg-gray-900 dark:focus:bg-gray-900">
+                {{ .Name }}
+              </a>
+            {{ end }}
+          </dd>
+        </dl>
+      {{ else }}
+        <a href="{{ .URL }}" class="group grid gap-x-2 gap-y-1 grid-cols-1 lg:grid-cols-auto-span items-center justify-items-center lg:justify-items-start first:ml-auto ml-1 px-3 py-2 rounded-lg bg-transparent hover:text-white/50 focus:text-white/50 whitespace-nowrap transition-colors">
+          {{ .Pre }}
+          {{ .Name }}
+        </a>
       {{ end }}
-    </div>
-    <div class="flex items-center space-x-2">
+    {{ end }}
+    <div class="flex ml-auto space-x-2">
       {{ range .Site.Menus.buttons }}
-        <a class="transition-colors shrink-0 ml-2 inline-flex items-center px-4 py-2 text-sm font-medium rounded-md border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900
+        <a class="transition-colors shrink-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded-lg border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900
         {{ if (eq .Params.style "solid") }} border-transparent bg-indigo-500 hover:bg-indigo-600 focus:bg-indigo-600 focus:ring-indigo-600{{ end }}
-        {{ if (eq .Params.style "outline") }} border-white hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white{{ end }}" href="{{ .URL }}">
+        {{ if (eq .Params.style "outline") }} border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white{{ end }}" href="{{ .URL }}">
           {{ .Name }}
         </a>
       {{ end }}
     </div>
 	</nav>
+  <button type="button" class="transition-colors shrink-0 flex-1 lg:flex-none mx-8 lg:ml-2 lg:mr-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded-lg border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white">
+    <svg class="w-[0.875rem] h-[0.875rem] mr-0.5" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+      <circle cx="10" cy="10" r="7" />
+      <line x1="21" y1="21" x2="15" y2="15" />
+    </svg>
+    <span class="lg:sr-only flex-auto ml-1 mr-4">Quick search&hellip;</span>
+    <kbd class="font-sans font-semibold">
+      <abbr title="Command" class="no-underline">⌘</abbr>
+      K
+    </kbd>
+  </button>
+  <button data-menu-toggle aria-expanded="false" class="menu-toggle block ml-auto lg:hidden relative z-50"> 
+    <span class="sr-only">Open main menu</span> 
+    <svg aria-hidden="true" role="img" viewBox="0 0 24 24" style="pointer-events: none; width: 24px; height: 24px;" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="4" y1="6" x2="20" y2="6" />
+      <line x1="4" y1="12" x2="20" y2="12" />
+      <line x1="4" y1="18" x2="20" y2="18" />
+    </svg>
+  </button>
 </div>
+<!-- 
+<div x-data="{ open: true }" @keydown.window.escape="open = false" x-init="$watch(&quot;open&quot;, o => !o &amp;&amp; window.setTimeout(() => (open = true), 1000))" x-show="open" class="relative z-[60]" aria-labelledby="modal-title" x-ref="dialog" aria-modal="true">
+  <div x-show="open" x-transition:enter="ease-out duration-300" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="ease-in duration-200" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="Background backdrop, show/hide based on modal state." class="fixed inset-0 bg-slate-500 bg-opacity-75 transition-opacity"></div>
+  <div class="fixed z-10 inset-0 overflow-y-auto">
+    <div class="flex items-end sm:items-center justify-center min-h-full p-4 text-center sm:p-0">
+      <div x-show="open" x-transition:enter="ease-out duration-300" x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95" x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100" x-transition:leave="ease-in duration-200" x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95" x-description="Modal panel, show/hide based on modal state." class="relative bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-sm sm:w-full sm:p-6" @click.away="open = false">
+        <div>
+          <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-green-100">
+            <svg class="h-6 w-6 text-green-600" x-description="Heroicon name: outline/check" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"></path>
+            </svg>
+          </div>
+          <div class="mt-3 text-center sm:mt-5">
+            <h3 class="text-lg leading-6 font-medium text-slate-900" id="modal-title">
+              Payment successful
+            </h3>
+            <div class="mt-2">
+              <p class="text-sm text-slate-500">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur amet labore.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="mt-5 sm:mt-6">
+          <button type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:text-sm" @click="open = false">
+            Go back to dashboard
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
